--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,1 +1,1 @@
-<li *ngFor="let category of categoryList">{{category.name}}</li>
+<li *ngFor="let category of categoryList"><a ></a>{{category.name}}</li>
