--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <h1>
+    {{title}}
+  </h1>
 
-<app-categories [categoryList]="categoryList"></app-categories>
-<router-outlet></router-outlet>
+  <router-outlet>
+  </router-outlet>
+
+</div>
