Retrieve category object using categoryService

--- a/src/app/category-detail/category-detail.component.html
+++ b/src/app/category-detail/category-detail.component.html
@@ -1,1 +1,6 @@
-<h2>This category has id number: {{categoryId}}</h2>
+<div>
+  <h3>{{categoryToDisplay.name}}</h3>
+  <h4>{{categoryToDisplay.name}}</h4>
+  <p>{{categoryToDisplay.name}}</p>
+  <div><em>{{categoryToDisplay.id}}</em></div>
+</div>
