Create listings and link to category detail page

--- a/src/app/category-detail/category-detail.component.html
+++ b/src/app/category-detail/category-detail.component.html
@@ -1,6 +1,4 @@
 <div>
   <h3>{{categoryToDisplay.name}}</h3>
-  <h4>{{categoryToDisplay.name}}</h4>
-  <p>{{categoryToDisplay.name}}</p>
-  <div><em>{{categoryToDisplay.id}}</em></div>
+  <app-listings></app-listings>
 </div>
