Add listings to category detail pages

--- a/src/app/category-detail/category-detail.component.html
+++ b/src/app/category-detail/category-detail.component.html
@@ -1,4 +1,4 @@
 <div>
   <h3>{{categoryToDisplay.name}}</h3>
-  <app-listings></app-listings>
+  <app-listings [categoryId]="categoryId"></app-listings>
 </div>
