--- a/src/app/listings/listings.component.html
+++ b/src/app/listings/listings.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div *ngFor="let listing of listingList">
+  <div *ngFor="let listing of categoryListingList">
     {{listing.title}}
   </div>
 </div>
